Change the name of image

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 
 <body>
     <div class="container">
-        <div class="box1"><img src="355.jpg" alt="natcher"></div>
+        <div class="box1"><img src="image.jpg" alt="natcher"></div>
         <div class="box2">nature</div>
         <div class="box3">photo</div>
         <div class="box4">shoot</div>
